change pachage dependence

--- a/components/ha-esphomeapi/Makefile
+++ b/components/ha-esphomeapi/Makefile
@@ -22,18 +22,17 @@ include $(TOPDIR)/feeds/packages/lang/python/pypi.mk
 include $(INCLUDE_DIR)/package.mk
 include $(TOPDIR)/feeds/packages/lang/python/python3-package.mk
 
-define Package/python3-ha-aioesphomeapi
+define Package/ha-aioesphomeapi
   CATEGORY:=Homeassistant
   SUBMENU:=Components
-  TITLE:=Python API for interacting with ESPHome devices.
+  TITLE:=API for interacting with ESPHome devices.
   URL:=https://pypi.org/project/aioesphomeapi/
-  DEPENDS:= \
-      +python3-light
+  DEPENDS:= +homeassistant
 endef
 
-define Package/python3-ha-aioesphomeapi/description
+define Package/ha-aioesphomeapi/description
  Esphomeapi allows you to interact with devices flashed with ESPHome.
 endef
 
-$(eval $(call Py3Package,python3-ha-aioesphomeapi))
-$(eval $(call BuildPackage,python3-ha-aioesphomeapi))
+$(eval $(call Py3Package,ha-aioesphomeapi))
+$(eval $(call BuildPackage,ha-aioesphomeapi))
