--- a/components/ha-hacs/Makefile
+++ b/components/ha-hacs/Makefile
@@ -18,7 +18,7 @@ define Package/ha-hacs
   TITLE:=HACS (metapackage)
   URL:=https://github.com/hacs/integration
   PKG_DEFAULT_DEPENDS:= \
-	+python3-light \
+	+homeassistant \
 	+python3-ha-aiofiles \
 	+python3-ha-aiogithubapi \
 	+python3-ha-aiohttp \
