Add missing DEPENDS:= +python3-light

--- a/python-packages/python-ha-astpath/Makefile
+++ b/python-packages/python-ha-astpath/Makefile
@@ -28,7 +28,7 @@ define Package/python3-ha-astpath
   SUBMENU:=Python packages
   TITLE:=Custom Python linting through AST expressions.
   URL:=https://pypi.org/project/astpath/
-  DEPENDS:= 
+  DEPENDS:= +python3-light
 endef
 
 define Package/python3-ha-astpath/description
