--- a/python-packages/python-ha-queueman/Makefile
+++ b/python-packages/python-ha-queueman/Makefile
@@ -27,7 +27,7 @@ define Package/python3-ha-queueman
   SUBMENU:=Python packages
   TITLE:=No project description provided.
   URL:=https://pypi.org/project/queueman/
-  DEPENDS:= 
+  DEPENDS:= +python3-light 
 endef
 
 define Package/python3-ha-queueman/description
