rename hass startup script for @mrG1K

--- a/homeassistant/Makefile
+++ b/homeassistant/Makefile
@@ -115,7 +115,7 @@ define Py3Package/homeassistant/install
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/hass $(1)/usr/bin
 
 	$(INSTALL_DIR) $(1)/etc/init.d
-	$(INSTALL_BIN) ./files/S99hass $(1)/etc/init.d
+	$(INSTALL_BIN) ./files/homeassistant $(1)/etc/init.d
 
 	$(INSTALL_DIR) $(1)/etc/homeassistant
 	$(INSTALL_BIN) ./files/installed $(1)/etc/homeassistant
