--- a/python-packages/python-ha-pytz-deprecation-shim/Makefile
+++ b/python-packages/python-ha-pytz-deprecation-shim/Makefile
@@ -11,7 +11,7 @@ PKG_NAME:=python-pytz-deprecation-shim
 PKG_VERSION:=0.1.0.post0
 PKG_RELEASE:=1
 
-PYPI_NAME:=pytz-deprecation-shim
+PYPI_NAME:=pytz_deprecation_shim
 PKG_HASH:=af097bae1b616dde5c5744441e2ddc69e74dfdcb0c263129610d85b87445a59d
 
 PKG_MAINTAINER:=Lenar Mahmutov <lenz1986@gmail.com>
