include custom component ble_monitor files

--- a/components/ha-ble-monitor/Makefile
+++ b/components/ha-ble-monitor/Makefile
@@ -3,12 +3,15 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ha-ble-monitor
-PKG_VERSION:=0.1
 PKG_RELEASE:=1
 
-PKG_SOURCE:=
-PKG_SOURCE_URL:=
-PKG_HASH:=unknown
+PKG_SOURCE_URL:=https://github.com/custom-components/ble_monitor.git
+PKG_MIRROR_HASH:=9f264c8edc0ae3c7ed07f9342388025743e03a685a72c57fac9272874dbec065
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_DATE:=2021-11-18
+PKG_SOURCE_VERSION:=0913e5fb1ccb47a3ff6850f3c86ebb698228ceac
+
+PKG_MAINTAINER:=Lenar Mahmutov <lenz1986@gmail.com>
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -27,12 +30,17 @@ define Package/ha-ble-monitor/description
  Passive BLE Monitor integration.
 endef
 
-Build/Prepare:=:
-Build/Configure:=:
-Build/Compile:=:
+define Build/Prepare
+        $(Build/Prepare/Default)
+	$(PKG_UNPACK)
+endef
 
 define Package/ha-ble-monitor/install
-	true
+	$(INSTALL_DIR) $(1)/etc/homeassistant/custom_components/
+	$(CP) $(PKG_BUILD_DIR)/custom_components/ble_monitor $(1)/etc/homeassistant/custom_components/
 endef
+
+Build/Configure:=:
+Build/Compile:=:
 
 $(eval $(call BuildPackage,ha-ble-monitor))
